--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "sample login page for a node app",
-  "main": "app.js",
+  "name": "Nike-Adidas",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/akarpz/node-login.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/akarpz/node-login/issues"
-  },
-  "homepage": "https://github.com/akarpz/node-login#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
